--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -85,7 +85,7 @@
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="MinStudent">
-        <mat-header-cell *matHeaderCellDef>Min Student
+        <mat-header-cell *matHeaderCellDef>Section Min Student
         </mat-header-cell>
         <mat-cell style="display: flex;" *matCellDef="let element">
             <mat-form-field appearance="outline">
@@ -95,7 +95,7 @@
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="MaxStudent">
-        <mat-header-cell *matHeaderCellDef>Max Student
+        <mat-header-cell *matHeaderCellDef>Section Max Student
         </mat-header-cell>
         <mat-cell style="display: flex;" *matCellDef="let element">
             <mat-form-field appearance="outline">
