--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -6,6 +6,14 @@
 <form style="display: flex;flex-direction: row;justify-content: space-around;" [formGroup]="searchForm">
     <div>
         <mat-form-field appearance="outline">
+            <mat-label>Fee Type</mat-label>
+            <mat-select formControlName="searchFeeTypeId">
+                <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">
+                    {{item.FeeTypeName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
                 <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
@@ -78,6 +86,12 @@
             {{element.GenderName}}
         </mat-cell>
     </ng-container>
+    <ng-container matColumnDef="ClassName">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            {{element.ClassName}}
+        </mat-cell>
+    </ng-container>
     <ng-container matColumnDef="RollNo">
         <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>RollNo
         </mat-header-cell>
@@ -88,6 +102,7 @@
             </mat-form-field>
         </mat-cell>
     </ng-container>
+    
     <ng-container matColumnDef="SectionId">
         <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Section
         </mat-header-cell>
