--- a/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
+++ b/src/app/modules/employeedetail/employeeboard/employeeboard.component.html
@@ -3,7 +3,7 @@
     <mat-card-title style="margin: 20px;">Employee</mat-card-title>
     <mat-card-subtitle style="font-weight: bold; margin:0px 20px 20px 20px;background-color: lightgray;padding: 10px;">{{EmployeeName}}</mat-card-subtitle>
     <mat-card-content style="margin:20px;max-height: inherit;">
-        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
                     <mat-icon>{{tabNames[indx].faIcon}}</mat-icon>{{tabNames[indx].label}}
