--- a/src/app/modules/evaluation/evaluationboard/evaluationboard.component.html
+++ b/src/app/modules/evaluation/evaluationboard/evaluationboard.component.html
@@ -3,7 +3,7 @@
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content style="margin:20px">
 
-        <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
+        <mat-tab-group style="max-width: 1200px;" [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
             <mat-tab *ngFor="let component of components;let indx=index">
                 <ng-template mat-tab-label>
                     <mat-icon>{{tabNames[indx].faIcon}}</mat-icon> {{tabNames[indx].label}}
