--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.html
@@ -1,6 +1,6 @@
-<!-- <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Class Evaluation</strong></div>
-</div> -->
+<div style="padding:15px 15px 10px 15px;">
+    <div><strong>Evaluation Class Subject Exam Mapping</strong></div>
+</div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
 <div style="padding: 15px;" fxLayout="row wrap">
@@ -29,31 +29,32 @@
                     </mat-option>
                 </mat-select>
             </mat-form-field>
-
-            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationMaster()">
+            <mat-form-field appearance="outline" [style.width.px]="150">
+                <mat-label>Exam</mat-label>
+                <mat-select formControlName="searchExamId">
+                    <mat-option [value]="0">select</mat-option>
+                    <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <button [disabled]="loading" mat-raised-button color="accent" (click)="GetEvaluationClassSubjectMap()">
                 <mat-icon>search</mat-icon>
             </button>
         </form>
         <!-- <div style="width: 100%;"> -->
         <mat-table #table [dataSource]="dataSource" matSort>
-            <ng-container matColumnDef="EvaluationMasterId">
+            <ng-container matColumnDef="EvaluationClassSubjectMapId">
                 <mat-header-cell *matHeaderCellDef>Id
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    {{element.EvaluationMasterId}}
+                    {{element.EvaluationClassSubjectMapId}}
                 </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="Title">
-                <mat-header-cell *matHeaderCellDef mat-sort-header>Title
+            <ng-container matColumnDef="EvaluationType">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Evaluation Name
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element">
-                    <mat-form-field appearance="outline">
-                        <input [maxlength]="250" 
-                        autocomplete="Off"
-                        matInput 
-                        (blur)="onBlur(element)" [value]="element.Title"
-                            [(ngModel)]="element.Title">
-                    </mat-form-field>
+                    {{element.EvaluationType}}
                 </mat-cell>
             </ng-container>
             <ng-container matColumnDef="ClassId">
@@ -81,6 +82,19 @@
                         </mat-select>
                     </mat-form-field>
                 </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ExamId">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>Exam
+                </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    <mat-form-field appearance="outline">
+                        <mat-select (selectionChange)="onBlur(element)" [(ngModel)]="element.ExamId"
+                            [value]="element.ExamId">
+                            <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </mat-cell>
             </ng-container>  
             <ng-container matColumnDef="Active">
                 <mat-header-cell *matHeaderCellDef style="justify-content: center;">Active
@@ -98,9 +112,6 @@
                     </button>
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                    <button style="margin-right:15px;" mat-raised-button color="accent" (click)="PassParent(element)">
-                        <mat-icon>pageview</mat-icon>
-                    </button>
                     <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
                         (click)="UpdateOrSave(element)">
                         <mat-icon>save</mat-icon>
