--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
@@ -5,9 +5,11 @@ mat-form-field{
 .mat-column-Action,.mat-column-Active,.mat-column-EvaluationMasterId{
     flex:1 1 100px;
 }
+.mat-column-ExamId,
+.mat-column-EvaluationType,
 .mat-column-Title,
 .mat-column-ClassId,
 .mat-column-ClassSubjectId{
     
-    flex:1 1 200px;
+    flex:1 1 150px;
 }
