--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -1,11 +1,10 @@
 <mat-card>
-    <mat-card-title style="margin:20px">Student</mat-card-title>
+    <mat-card-title style="margin:20px">Student/Fee</mat-card-title>
     <mat-card-subtitle>&nbsp;</mat-card-subtitle>
     <mat-card-content style="margin:20px">
         <!-- <alert></alert> -->
         <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
         <form [formGroup]="studentSearchForm" fxLayout="row wrap" fxLayoutAlign="center center">
-           
             <mat-form-field appearance="outline" style="width: 100px;">
                 <mat-label>Id</mat-label>
                 <input formControlName="searchStudentId" autocomplete="Off" matInput [maxlength]="10">
