--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -41,10 +41,7 @@
                 </mat-form-field>
                 <button [disabled]="loading" mat-raised-button color="accent" (click)="GetExamStudentSubjectResults()">
                     <mat-icon>search</mat-icon>
-                </button>
-                <!-- <button [disabled]="loading" matTooltip="clear all" class="mat-raised-button" (click)="clear()">
-                    <mat-icon>clear_all</mat-icon>
-                </button> -->
+                </button>                
             </form>
 
             <mat-table #table style="overflow: auto;" [dataSource]="dataSource">
@@ -57,8 +54,8 @@
                             </button>
                         </div>
                     </mat-header-cell>
-                    <mat-cell *matCellDef="let element ">
-                        <mat-form-field *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
+                    <mat-cell *matCellDef="let element">
+                        <mat-form-field style="text-align: center;" *ngIf="disCol !='StudentClassSubject' && disCol !='Action'">
                             <input matInput type="number" (blur)="onBlur(element,$event)" [attr.name]="disCol"
                                 [value]="element[disCol]" [(ngModel)]="element[disCol]">
                         </mat-form-field>
