--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -11,7 +11,7 @@ mat-form-field,button{
 .mat-column-ClassName{
     flex: 1 1 120px;
 }
-.mat-column-StudentName,.mat-column-FeeTypeId{
+.mat-column-StudentName,.mat-column-FeeTypeId,.mat-column-Remarks{
     flex: 1 1 150px;
 }
 .mat-cell:first-of-type{
