--- a/src/app/modules/evaluation/classevaluation/classevaluation.component.scss
+++ b/src/app/modules/evaluation/classevaluation/classevaluation.component.scss
@@ -2,9 +2,9 @@ mat-form-field{
     margin-right:15px;
     width: 98%;
 }
-::ng-deep .mat-form-field-infix{
-    width: auto !important;
-}
+// ::ng-deep .mat-form-field-infix{
+//     width: auto !important;
+// }
 button{
     margin-right:15px;
 }
