--- a/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.scss
+++ b/src/app/modules/student/studentfeepayment/addstudentfeepayment/addstudentfeepayment.component.scss
@@ -13,25 +13,16 @@ svg {
 .mat-column-MonthName{
     flex: 1 1 70px;
 }
-.mat-column-SlNo
-{
-    flex:1 1 50px;
-}
+.mat-column-FeeName,
+.mat-column-SlNo,
 .mat-column-Paid,
 .mat-column-Action,
 .mat-column-TotalCredit,
 .mat-column-TotalDebit,
 .mat-column-Balance {
-    justify-content: flex-end;
     flex:1 1 60px;
 }
 
-.example-container {
-    display       : flex;
-    flex-direction: column;
-    max-height    : 500px;
-    min-width     : 300px;
-}
 
 .mat-table {
     overflow    : auto;
@@ -69,6 +60,5 @@ td {
 
 .mat-column-PaymentAmt {
     display        : flex;
-    //padding: 21px 0;
     justify-content: flex-end;
 }
