copy from previous - buttons tested

--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.scss
@@ -1,19 +1,25 @@
-mat-form-field,button{
+mat-form-field{
     margin-right: 15px;
+    width:98%;
 }
 .mat-column-StudentId{
     flex:1 1 70px;
 }
-.mat-column-Active,.mat-column-Action,.mat-column-RollNo,.mat-column-SectionId{
-    justify-content: center;
+.mat-column-GenderName,
+.mat-column-Active,
+.mat-column-Action,
+.mat-column-RollNo,
+.mat-column-ClassName,
+.mat-column-SectionId{
+    //justify-content: center;
     flex:1 1 100px;
 }
-.mat-column-ClassName{
-    flex: 1 1 120px;
-}
-.mat-column-StudentName,.mat-column-FeeTypeId,.mat-column-Remarks{
-    flex: 1 1 150px;
+
+.mat-column-StudentName,
+.mat-column-FeeTypeId,
+.mat-column-Remarks{
+    flex:1 1 150px;
 }
 .mat-cell:first-of-type{
-    margin-left: 0px;
+    padding-left: 0px;
 }
