--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -2,18 +2,10 @@
     <div><strong>Class Student</strong></div>
 </div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-<!-- <alert></alert> -->
 <form style="display: flex;flex-direction: row;justify-content: space-around;" [formGroup]="searchForm">
     <div>
-        <mat-form-field appearance="outline">
-            <mat-label>Fee Type</mat-label>
-            <mat-select formControlName="searchFeeTypeId">
-                <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">
-                    {{item.FeeTypeName}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
+       
+        <mat-form-field appearance="outline" style="width: 150px;">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
                 <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
@@ -21,7 +13,7 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <mat-form-field appearance="outline">
+        <mat-form-field appearance="outline" style="width: 150px;">
             <mat-label>Section</mat-label>
             <mat-select formControlName="searchSectionId">
                 <mat-option value="0">--section--</mat-option>
@@ -30,14 +22,22 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentClasses('')">
+        <mat-form-field appearance="outline" style="width: 150px;">
+            <mat-label>Fee Type</mat-label>
+            <mat-select formControlName="searchFeeTypeId">
+                <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">
+                    {{item.FeeTypeName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button [disabled]="loading" style="margin-right: 10px;" mat-raised-button color="accent" (click)="GetData('')">
             <mat-icon>search</mat-icon>
         </button>
-        <button [disabled]="loading" matTooltip="copy from previous class & previous batch" class="mat-raised-button"
+        <button [disabled]="loading" style="margin-right: 10px;" matTooltip="Data from previous batch & previous class" class="mat-raised-button"
             (click)="CopyFromPreviousClassAndBatch()">
             <mat-icon>copy_all</mat-icon>
         </button>
-        <button [disabled]="loading" matTooltip="copy from same class & previous batch" class="mat-raised-button"
+        <button [disabled]="loading" matTooltip="Data from previous batch & same class" class="mat-raised-button"
             (click)="CopyFromSameClassPreviousBatch()">
             <mat-icon>content_copy</mat-icon>
         </button>
@@ -50,7 +50,7 @@
         </button>
     </div>
 </form>
-<div style="font-size: medium;">{{ HeaderTitle }}</div>
+<div style="font-size: medium;padding: 15px 0px 15px 0px;font-weight: bold;">{{ HeaderTitle }}</div>
 <mat-table #table [dataSource]="dataSource" matSort>
     <ng-container matColumnDef="StudentId">
         <mat-header-cell *matHeaderCellDef mat-sort-header> 
@@ -96,7 +96,7 @@
         <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>RollNo
         </mat-header-cell>
         <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-            <mat-form-field [style.width.px]="50">
+            <mat-form-field>
                 <input matInput (blur)="onBlur(element)" [value]="element.RollNo" [(ngModel)]="element.RollNo"
                     autocomplete="Off" [maxlength]="10">
             </mat-form-field>
@@ -106,11 +106,10 @@
     <ng-container matColumnDef="SectionId">
         <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Section
         </mat-header-cell>
-        <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-            <mat-form-field [style.width.px]="50">
+        <mat-cell *matCellDef="let element">
+            <mat-form-field>
                 <mat-select (selectionChange)="onBlur(element)" [value]="element.SectionId"
                     [(ngModel)]="element.SectionId">
-                    <!-- <mat-option value="0">--section--</mat-option> -->
                     <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
                     </mat-option>
                 </mat-select>
@@ -120,7 +119,7 @@
     <ng-container matColumnDef="FeeTypeId">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Fee Type </mat-header-cell>
         <mat-cell *matCellDef="let element">
-            <mat-form-field [style.width.px]="250">
+            <mat-form-field>
                 <mat-select (selectionChange)="onBlur(element)" [value]="element.FeeTypeId"
                     [(ngModel)]="element.FeeTypeId">
                     <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">{{item.FeeTypeName}}
@@ -133,10 +132,22 @@
         <mat-header-cell style="display: flex;justify-content: center;" *matHeaderCellDef mat-sort-header>Remarks
         </mat-header-cell>
         <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
-            <mat-form-field [style.width.px]="150">
+            <mat-form-field>
                 <input matInput (blur)="onBlur(element)" [value]="element.Remarks" [(ngModel)]="element.Remarks"
                     autocomplete="Off" [maxlength]="250">
             </mat-form-field>
+        </mat-cell>
+    </ng-container>
+    <ng-container matColumnDef="Active">
+        <mat-header-cell *matHeaderCellDef mat-sort-header> 
+            <mat-checkbox (click)="$event.stopPropagation()"
+                (change)="SelectALL($event)">
+            </mat-checkbox>
+            &nbsp;Active </mat-header-cell>
+        <mat-cell *matCellDef="let element">
+            <mat-checkbox (click)="$event.stopPropagation()"
+                (change)="updateActive(element,$event)" [checked]="element.Active==1?true:false">
+            </mat-checkbox>
         </mat-cell>
     </ng-container>
     <ng-container matColumnDef="Action">
@@ -150,12 +161,7 @@
             <button [disabled]="loading || !element.Action || Permission=='read'" matTooltip="save" mat-mini-fab
                 (click)="SaveRow(element)">
                 <mat-icon>save</mat-icon>
-            </button>
-            <!-- <button
-                    [disabled]="loading|| PromotePermission=='read'|| PromotePermission=='deny' || checkBatchIdNSelectedIdEqual==0"
-                    matTooltip="promote" mat-mini-fab (click)="PromoteRow(element)">
-                    <mat-icon>loupe</mat-icon>
-                </button> -->
+            </button>        
         </mat-cell>
     </ng-container>
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
