--- a/src/app/modules/misc/no-of-student/no-of-student.component.html
+++ b/src/app/modules/misc/no-of-student/no-of-student.component.html
@@ -1,5 +1,5 @@
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>No. Of Student</strong></div>
+    <div><strong>No. Of Students</strong></div>
 </div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <!-- <alert></alert> -->
